# cowrywise-assessment

./: .env.example  .gitignore  Makefile  README.md  cowrywise.code-workspace  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
infra/: bookworm.Dockerfile  librarian.Dockerfile  pagekeeper.Dockerfile
